# forc-wasm

./: .gitignore  Cargo.toml  README.md  justfile
examples/greet/: package-lock.json  package.json  webpack.config.js
examples/greet/js/: index.js
examples/greet/static/: index.html
examples/my-contract/: README.md  package-lock.json  package.json  webpack.config.js
examples/my-contract/js/: index.js
examples/my-contract/static/: index.html
src/: build.rs  console.rs  greet.rs  lib.rs  types.rs
