[package]
name = "forc-wasm"
version = "0.1.0"
authors = ["Septimus Shepherd <septimus.shepherd@gmail.com>"]
description = "WASM implementation of Forc for creating, building, testing, and deploying Sway projects."
repository = "https://github.com/septshep/forc-wasm"
license = "Apache-2.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1", optional = true }

forc-pkg = "0.66.6"
getrandom = { version = "0.2", features = ["js"] }
hex = "0.4"
js-sys = "0.3"
rand = { version = "0.9", features = ["wasm-bindgen"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["rt", "macros", "net", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = {version = "0.2", features = ["serde-serialize"]}
web-sys = { version = "0.3", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
